--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-hot-loader": "^4.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-scroll": "^1.7.7",
     "semantic-ui-less": "^2.3.0",
     "semantic-ui-react": "^0.78.3",
     "style-loader": "^0.20.2",
