--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.8",
+    "exports-loader": "^0.7.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "final-form": "^4.0.0",
     "history": "^4.7.2",
     "html-webpack-plugin": "^2.30.1",
+    "imports-loader": "^0.8.0",
     "install": "^0.10.2",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
@@ -47,7 +49,8 @@
     "style-loader": "^0.20.2",
     "styled-components": "^3.1.6",
     "url-loader": "^0.6.2",
-    "webpack": "^3.10.0"
+    "webpack": "^3.10.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
