--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "compression": "^1.7.1",
     "css-loader": "^0.28.8",
     "exports-loader": "^0.7.0",
+    "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "final-form": "^4.0.0",
@@ -38,10 +40,12 @@
     "mobx-react-devtools": "^4.2.15",
     "mobx-react-router": "^4.0.1",
     "mobx-utils": "^3.2.2",
+    "raw-loader": "^0.5.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-final-form": "^3.0.2",
     "react-hot-loader": "^4.0.0",
+    "react-markdown": "^3.3.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scroll": "^1.7.7",
@@ -51,9 +55,7 @@
     "styled-components": "^3.1.6",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
-    "whatwg-fetch": "^2.0.3",
-    "express": "^4.16.2",
-    "compression": "^1.7.1"
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
