--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "install": "^0.10.2",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "lodash": "^4.17.5",
     "mobx": "^3.5.1",
     "mobx-react": "^4.4.1",
     "mobx-react-devtools": "^4.2.15",
