--- a/package.json
+++ b/package.json
@@ -26,13 +26,12 @@
     "css-loader": "^0.28.8",
     "exports-loader": "^0.7.0",
     "express": "^4.16.2",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.6",
     "final-form": "^4.0.0",
     "history": "^4.7.2",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.2.0",
     "imports-loader": "^0.8.0",
-    "install": "^0.10.2",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "lodash": "^4.17.5",
@@ -55,7 +54,7 @@
     "style-loader": "^0.20.2",
     "styled-components": "^3.1.6",
     "url-loader": "^0.6.2",
-    "webpack": "^3.10.0",
+    "webpack": "^4.4.1",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
@@ -66,6 +65,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.6.1",
     "jest": "^22.1.2",
-    "webpack-dev-server": "^2.11.1"
+    "webpack-cli": "^2.0.13",
+    "webpack-dev-server": "^3.1.1"
   }
 }
